--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 
 html {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 html, body {
@@ -14,7 +14,7 @@ html, body {
     background: grey;
 }
 
-#top-bar {
+#page-1-top-bar {
     height: var(--top-bar-height);
     background: grey;
 }
@@ -47,6 +47,10 @@ html, body {
         cursor:pointer;
     }   
 
+    polygon:active {
+        fill: green;
+    }
+
     svg {
         position: absolute;
         stroke: rgb(128, 128, 128);
@@ -60,7 +64,7 @@ html, body {
 
 }
 
-#bottom-bar {
+#page-1-bottom-bar {
     height: 9.7vh;
     background: grey;
 }
@@ -90,4 +94,75 @@ html, body {
     width: 20%;
     flex-grow: 1;
     margin: 0vmin 1vmin;
+}
+
+#pages-container {
+    position: absolute;
+    top: 0%;
+    max-width: 100vw;
+    max-height: 100vh;
+    outline: 1px solid pink;
+    transition: top 1s cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+#pages-container.animate {
+    top: -100%;
+}
+
+#results-page{ 
+    min-width: 100vw;
+    min-height: 100vh;
+    background: bisque;
+}
+
+#page-2-top-bar {
+    display: flex;
+    justify-content: center;
+    min-height: var(--top-bar-height);
+    background: grey;
+}
+
+#return-button {
+    width: 5vmin;
+    height: 5vmin;
+    cursor: pointer;
+}
+
+#results-container {
+    display: grid;
+    margin: 0 auto;
+    padding: 5% 0;
+    max-width: 80%;
+    height: 80%;
+    grid-template-columns: repeat(auto-fit, 250px);
+    grid-auto-rows: 225px;
+    row-gap: 2.5%;
+    column-gap: 2%;
+    outline: 1px solid white;
+    justify-content: start;
+
+}
+
+.recipe-card {
+    border-radius: 7.5%;
+    background: rgb(232, 204, 128);
+    outline: 4px solid black;
+    overflow: hidden;
+    text-align: center;
+    vertical-align: text-bottom;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+}
+
+.recipe-card:hover {
+    box-shadow: 10px 5px 5px black;
+}
+
+.recipe-text-container {
+    display: grid;
+    width: 250px;
+    height: 75px;
+    place-items: center;
 }
