--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ html, body {
 
     #world-map {
         width: 100%;
+        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
     }
     
     polygon:hover {
