'0.1' complete. Core features added. Next step will be to stylise and populate with more content.

--- a/index.css
+++ b/index.css
@@ -169,11 +169,18 @@ html, body {
 }
 
 #recipe-page {
-    min-width: 100%;
-    min-height: 100%;
+    width: 60%;
+    min-height: 100vh;
     background: yellow;    
+    margin: auto;
 }
 
 #unitswitch {
     cursor: pointer;
+}
+
+#recipe-picture {
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
