First stage improvements to first page. Added decor, removed top/bottom bars, tidied presentation.

--- a/index.css
+++ b/index.css
@@ -21,13 +21,11 @@ html, body {
 
 #ocean {
     width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #0099ff;
-    border-bottom: 0.3vmin solid white;
-    border-top: 0.3vmin solid white;
-    padding: 2.5% 0%;
 
     #map-container {
         position: relative;
@@ -61,8 +59,24 @@ html, body {
         z-index: 100;
     }
 
+    #map-compass {
+        z-index: 10;
+        left: 0%;
+        top: 70%;
+        width: 15%;
+        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
+    }
 
-
+    .map-decor {
+        position: absolute;
+        z-index: 10;
+    }
+    
+    #wave-1 { width: 7%; left: 0%; top: 35%;}
+    #wave-2 {width: 7%; left: 39%; top: 74%;}
+    #wave-3 {width: 7%; left: 67%; top: 85%;}
+    #wave-4 {width: 7%; left: 90%; top: 38%;}
+           
 }
 
 #page-1-bottom-bar {
@@ -81,6 +95,7 @@ html, body {
     top: 93vmin;
     height: 7vmin;
     background: grey;
+    filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
 }
 
 #flag {
