--- a/index.css
+++ b/index.css
@@ -14,9 +14,78 @@ html, body {
     background: grey;
 }
 
-#page-1-top-bar {
-    height: var(--top-bar-height);
+#country-list {
+    position: absolute;
     background: grey;
+    transition: left 1s cubic-bezier(0.5, 0, 0.5, 1);
+    width: 90vw;
+    height: 75vh;
+    top: 12%;
+    z-index: 20;
+    left: -90%;
+
+}
+
+#relative-wrapper {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#country-list-toggle-frame {
+    position: absolute;
+    display: grid;
+    place-items: center;
+    width: 7vmin;
+    height: 15vmin;
+    left: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    background: grey;
+    border-radius: 0 20% 20% 0
+}
+
+#country-list-toggle-button {
+    transform: rotate(90deg);
+    width: 80%;
+    cursor: pointer;
+}
+
+#country-list-items-container {
+    width: 90%;
+    height: 95%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(750px, 2fr));
+    grid-auto-rows: 225px;
+    column-gap: 5%;
+    row-gap: 1%;
+    justify-content: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.country-list-tile-item {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-evenly;
+    background: white;
+    overflow: hidden;
+    cursor: pointer;
+    container-type: inline-size;
+    border-radius: 1vmin;
+
+    img {
+        margin: auto;
+        height: 90%;
+        outline: 0.1vmin solid black;
+    }    
+}
+
+.country-list-tile-text {
+    font-size: 6.5cqw;
+    text-align: center;
+    margin: auto;
 }
 
 #ocean {
@@ -56,7 +125,7 @@ html, body {
         stroke-width: 0.3%;
         fill: grey;
         fill-opacity: 0.5;
-        z-index: 100;
+        z-index: 10;
     }
 
     #map-compass {
@@ -72,7 +141,7 @@ html, body {
         z-index: 10;
     }
     
-    #wave-1 { width: 7%; left: 0%; top: 35%;}
+    #wave-1 { width: 7%; left: 0%; top: 32%;}
     #wave-2 {width: 7%; left: 39%; top: 74%;}
     #wave-3 {width: 7%; left: 67%; top: 85%;}
     #wave-4 {width: 7%; left: 90%; top: 38%;}
