--- a/index.css
+++ b/index.css
@@ -89,8 +89,8 @@ html, body {
 }
 
 #ocean {
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
