--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
 html {
     overflow: hidden;
     scrollbar-width: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }   
 
 html, body {
@@ -187,7 +188,6 @@ html, body {
     top: 0%;
     max-width: 100vw;
     max-height: 100vh;
-    outline: 1px solid pink;
     transition: top 1s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
@@ -196,8 +196,8 @@ html, body {
 }
 
 #results-page{ 
-    min-width: 100vw;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
         background: #0099ff;
 }
 
@@ -214,39 +214,77 @@ html, body {
     cursor: pointer;
 }
 
+#results-content {
+    box-sizing: border-box;
+    background: rgb(52, 199, 192);
+    display: flex;
+    flex-direction: column;
+    gap: 1.5vmin;
+    align-items: center;
+    height: 100vmin;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+
+    h1 {
+        font-size: 40px;
+    }
+}
+
 #results-container {
     display: grid;
     margin: 0 auto;
     padding: 5% 0;
-    max-width: 80%;
-    height: 80%;
+    width: 100%;
+    flex-grow: 1;
     grid-template-columns: repeat(auto-fit, 250px);
     grid-auto-rows: 225px;
     row-gap: 2.5%;
     column-gap: 2%;
     background: rgb(166, 166, 166);
-    justify-content: start;
+    justify-content: space-around;
 
-    #thumbnail {
+    .recipe-card {
+        position: relative;
+        border-radius: 2.5%;
+        outline: 1px solid black;
+        overflow: hidden;
+        text-align: center;
+        vertical-align: text-bottom;
+        font-size: 25px;
+        font-weight: bold;
+        color: white;
+        cursor: pointer;
+
+        #thumbnail {
         height: 150px;
         width: 250px;
         object-fit: fill;
+        }   
+            
+        .external-icon {
+            position: absolute;
+            transform: translateX(-100%);
+            left: calc(100% - 10px);
+            top: 10px;
+            height: 30px;
+            width: 30px;
+            z-index: 20;
+        }
     }
 
+    .internal {
+        background: rgb(38, 186, 28);
+    }
+
+    .external {
+        background: rgb(212, 206, 53);
+    }
+
+
 }
 
-.recipe-card {
-    border-radius: 7.5%;
-    background: rgb(232, 204, 128);
-    outline: 4px solid black;
-    overflow: hidden;
-    text-align: center;
-    vertical-align: text-bottom;
-    font-size: 25px;
-    font-weight: bold;
-    color: white;
-    cursor: pointer;
-}
+
 
 .recipe-card:hover {
     box-shadow: 10px 5px 5px black;
@@ -262,16 +300,46 @@ html, body {
 #recipe-page {
     width: 60%;
     min-height: 100vh;
-    background: yellow;    
+    background: rgb(166, 166, 166);
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+}
+
+#recipe-content {
+    min-height: 0;
+    flex-grow: 1;
+    overflow-y: scroll;
+    padding-left: 2%;
+    padding-right: 2%;
+
+
+    h1, h2, h3 {
+        text-align: center;
+    }
+
 }
 
 #unitswitch {
     cursor: pointer;
 }
 
+#recipe-top-bar {
+    display: grid;
+    place-content: center;
+    padding: 2%;
+    background: rgb(52, 199, 192);
+}
+
 #recipe-picture {
-    width: 98%;
-    margin-left: 1%;
-    margin-right: 1%;
+    display: block;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.recipe-sub-header {
+    margin-top: 5px;
+    margin-top: 5px;
 }
