--- a/index.css
+++ b/index.css
@@ -6,7 +6,6 @@
 }
 
 html {
-    overflow: hidden;
     scrollbar-width: none;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }   
@@ -91,6 +90,7 @@ html, body {
 }
 
 #ocean {
+    z-index: 1;
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -128,6 +128,11 @@ html, body {
         fill: grey;
         fill-opacity: 0.5;
         z-index: 10;
+
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none;    /* Firefox */
+        -ms-user-select: none;     /* IE 10+ */
+        user-select: none;         /* Standard */
     }
 
     #map-compass {
@@ -135,6 +140,27 @@ html, body {
         left: 0%;
         top: 70%;
         width: 15%;
+        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
+    }
+
+    #map-top-bar {
+        position: absolute;
+        display: flex;
+        width: 80%;
+        top: 3%;
+        justify-content: center;
+    }
+
+    .map-menu-button {
+        display: grid;
+        background: grey;
+        border-radius: 5px;
+        padding: 1%;
+        min-height: 30px;
+        place-content: center;        
+        color: white;
+        font-weight: 800;
+        font-size: 20px;
         filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
     }
 
@@ -161,6 +187,8 @@ html, body {
     justify-content: space-between;
     align-items: center;
     position: absolute;
+    overflow: hidden;
+    z-index: -1;
     transform: translateX(-50%) translateY(-50%);
     left: 50%;
     top: 93vmin;
