--- a/index.css
+++ b/index.css
@@ -236,10 +236,7 @@ html, body {
     top: -100%;
 }
 
-#results-page{ 
-    width: 100vw;
-    height: 100vh;
-}
+
 
 #page-2-top-bar {
     display: flex;
@@ -256,7 +253,7 @@ html, body {
 
 #results-page {
     box-sizing: border-box;
-    background: rgb(255, 255, 255);
+    background: rgb(252, 252, 235);
     display: flex;
     flex-direction: column;
     gap: 1.5vmin;
@@ -306,7 +303,6 @@ html, body {
 
 .menu-subcontent {
     width: 100%;
-    background: rgb(212, 212, 212);
     display: grid;
     grid-template-columns: repeat(auto-fit, 250px);
     column-gap: 5%;
@@ -325,7 +321,7 @@ html, body {
     vertical-align: text-bottom;
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: black;
     cursor: pointer;
 
     #thumbnail {
@@ -369,7 +365,7 @@ html, body {
 #recipe-page {
     width: 60%;
     overflow: hidden;
-    background: rgb(166, 166, 166);
+    background: rgb(252, 252, 235);
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -387,7 +383,7 @@ html, body {
     overflow-y: scroll;
     padding-left: 2%;
     padding-right: 2%;
-
+    background: rgb(252, 252, 235);
 
     h1, h2, h3 {
         text-align: center;
@@ -396,14 +392,57 @@ html, body {
 }
 
 #unitswitch {
+    --switch-width: 250px;
+    position: relative;
+    display: grid;
+    grid-template-columns: 100px 100px;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    outline: 1px solid black;
+    width: var(--switch-width);
+    justify-content: space-between;
+
+    .unitswitch {
     cursor: pointer;
+    display: grid;
+    place-content: center;
+    text-align: center;
+    height: 30px;
+    outline: 1px solid black;
+    mix-blend-mode: difference;
+    color: white;
+    z-index: 100;
+    font-size: 12px;
+    }
+
+    .unitswitch:hover {
+        font-weight: bold;
+    }
+
+    #unitswitch-metric {
+    }
+
+    #unitswitch-imperial {
+    }
+
+    #unitswitch-color {
+        background: black;
+        position: absolute;
+        left: calc(var(--switch-width) - 100px);
+        transition: left 0.3s cubic-bezier(0.42, 0, 0.58, 1.0);
+        top: 0%;
+        width: 100px;
+        height: 50px;
+    }
 }
+
+
 
 #recipe-top-bar {
     display: grid;
     place-content: center;
     padding: 2%;
-    background: rgb(52, 199, 192);
 }
 
 #recipe-picture {
