--- a/authors/authors.css
+++ b/authors/authors.css
@@ -12,12 +12,21 @@ h1 {
     text-align: center;
 }
 
-img {
-    outline: 2px solid black;
-    float: right;
+#menu-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5%;
 }
 
-#main {
+.portrait {
+    outline: 2px solid black;
+    width: 500px;
+    float: right;
+    margin: 10px;
+}
+
+#frame {
     box-sizing: border-box;
     background: rgb(252, 252, 235);
     min-height: 95vh;
@@ -30,4 +39,12 @@ img {
     box-shadow: 5px 5px 10px black;
     padding: 3%;
 
+}
+
+#content {
+}
+
+.button {
+    width: 65px;
+    height: 65px;
 }
