--- a/authors/authors.css
+++ b/authors/authors.css
@@ -56,7 +56,12 @@ h1 {
     justify-content: start;
 }
 
+a {
+    text-decoration: none
+}
+
 .recipe-card {
+
     position: relative;
     width: 250px;
     height: 250px;
@@ -74,6 +79,10 @@ h1 {
     outline: 1px solid black;
     object-fit: fill;
     }
+}
+
+.recipe-card:hover {
+    box-shadow: 5px 5px 10px black;
 }
 
 .recipe-text-container {
