--- a/index.css
+++ b/index.css
@@ -3,29 +3,6 @@ TO DO: Add @media rule ("orientation") to trigger this list opening or something
 TO DO: Add @media rule ("hover") to disable this if the user cannot hover. 
 */
 
-@media (min-width >= 640px) {
-    html, body {
-        background: red;
-    }
-}
-
-@media (min-width >= 768px) {
-    body {
-        background: orange;
-    }
-}
-
-@media (min-width >= 1024px) {
-    body {
-        background: yellow;
-    }
-}
-
-@media (min-width >= 1280px) {
-    body {
-        background: green;
-    }
-}
 
 
 
@@ -116,7 +93,6 @@ body {
     background: white;
     overflow: hidden;
     cursor: pointer;
-    container-type: inline-size;
     border-radius: 1vmin;
     margin-left: 1vmin;
     margin-right: 1vmin;
@@ -530,7 +506,31 @@ body {
     display: block;
     margin-top: 10px;
     margin-bottom: 3px;
-    font-weight: strong;
+    font-weight: bold;
     font-size: 16px;
 
+}
+
+@media screen and (min-width >= 640px) {
+    body {
+        background-color: red;
+    }
+}
+
+@media screen and (min-width >= 768px) {
+    body {
+        background-color: orange;
+    }
+}
+
+@media screen and (min-width >= 1024px) {
+    body {
+        background-color: yellow;
+    }
+}
+
+@media screen and (min-width >= 1280px) {
+    body {
+        background-color: green;
+    }
 }
