--- a/index.css
+++ b/index.css
@@ -3,7 +3,34 @@ TO DO: Add @media rule ("orientation") to trigger this list opening or something
 TO DO: Add @media rule ("hover") to disable this if the user cannot hover. 
 */
 
+body {
+    margin: 0;
+    overflow: hidden;
+}
 
+@media screen and (min-width: 640px) {
+    body {
+        background-color: red;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        background-color: orange;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        background-color: yellow;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    body {
+        background-color: green;
+    }
+}
 
 
 :root {
@@ -21,13 +48,6 @@ html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
 }   
-
-body {
-    margin: 0;
-    background: #0099ff;
-    overflow: hidden;
-}
-
 #country-list {
 
     position: absolute;
@@ -511,26 +531,4 @@ body {
 
 }
 
-@media screen and (min-width >= 640px) {
-    body {
-        background-color: red;
-    }
-}
 
-@media screen and (min-width >= 768px) {
-    body {
-        background-color: orange;
-    }
-}
-
-@media screen and (min-width >= 1024px) {
-    body {
-        background-color: yellow;
-    }
-}
-
-@media screen and (min-width >= 1280px) {
-    body {
-        background-color: green;
-    }
-}
