--- a/index.css
+++ b/index.css
@@ -3,46 +3,137 @@ TO DO: Add @media rule ("orientation") to trigger this list opening or something
 TO DO: Add @media rule ("hover") to disable this if the user cannot hover. 
 */
 
-body {
-    margin: 0;
-    overflow: hidden;
-}
-
-@media screen and (min-width: 640px) {
-    body {
-        background-color: red;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    body {
-        background-color: orange;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    body {
-        background-color: yellow;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    body {
-        background-color: green;
-    }
-}
-
-
 :root {
     /*variable declaration*/
     --ocean-heght: 90vh;
     --top-bar-height: 9.7vh;
+
+    --results-side-margin: 15%;
+    --recipe-side-margin: 30%;
+
+    --button-standard-size: 65px;
+    --h1-standard-size: ;
+    --h2-standard-size: ;
+    --h3-standard-size: ;
+    --p-standard-size: ;
+
 
     /*
     TO DO: Add @media rule ("prefers-color-scheme") to control color schemes. Also make colors variables so I can use primary, secondary, tertiary etc. 
     */
 
 }
+
+body {
+    margin: 0;
+    overflow: hidden;
+}
+
+@media screen and (min-width: 980px) {
+    :root {
+        --results-side-margin: 2%;
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+    }
+
+    body {
+        background-color: red;
+    }
+
+    h1 {
+        font-size: 75px;
+    }
+
+    h2 {
+        font-size: 50px;
+    }
+
+    h3 {
+        font-size: 35px;
+    }
+}
+
+@media screen and (min-width: 1080px) {
+    :root {
+        --results-side-margin: 6%;
+        --recipe-side-margin: 12%;
+        --button-standard-size: 100px;
+    }
+
+    body {
+        background-color: orange;
+    }
+    
+    h1 {
+        font-size: 65px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    :root {
+        --results-side-margin: 10%;
+        --recipe-side-margin: 20%;
+        --button-standard-size: 85px;
+    }
+
+    body {
+        background-color: yellow;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+}
+
+@media screen and (min-width: 1920px) {
+    :root {
+        --results-side-margin: 15%;
+        --recipe-side-margin: 30%;
+        --button-standard-size: 65px;
+    }
+
+    body {
+        background-color: green;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+}
+
+@media (hover:none) {
+    :root {
+        --do-not-display-country-block: true;
+    }
+
+}
+
+
 
 html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -129,7 +220,7 @@ html {
     display: grid;
     place-content: center;
     text-align: center;
-    font-size: 6.5cqw;
+    font-size: 70px;
 }
 
 #ocean {
@@ -277,8 +368,8 @@ html {
 }
 
 #return-button {
-    width: 65px;
-    height: 65px;
+    width: var(--button-standard-size);
+    height:var(--button-standard-size);
     margin-top: 1%;
     cursor: pointer;
 }
@@ -295,7 +386,7 @@ html {
     margin-top: 2.5vh;
     margin-bottom: 5vh;
     border-radius: 20px 20px 0% 20px;
-    width: 70%;
+    width: calc(100% - (var(--results-side-margin) * 2));
     min-width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -303,7 +394,6 @@ html {
     overflow: hidden;
 
     h1 {
-        font-size: 40px;
         margin: 0;
     }
 }
@@ -312,6 +402,7 @@ html {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    padding-bottom: 50px;
 }
 
 .menu-section-container {
@@ -401,7 +492,7 @@ html {
 
 #recipe-page {
     position: relative;
-    width: 40%;
+    width: calc(100% - calc(var(--recipe-side-margin) * 2));
     min-width: 800px;
     overflow: hidden;
     background: rgb(252, 252, 235);
