--- a/index.css
+++ b/index.css
@@ -7,122 +7,180 @@ TO DO: Add @media rule ("hover") to disable this if the user cannot hover.
     /*variable declaration*/
     --ocean-heght: 90vh;
     --top-bar-height: 9.7vh;
-
     --results-side-margin: 15%;
     --recipe-side-margin: 30%;
-
     --button-standard-size: 65px;
-    --h1-standard-size: ;
-    --h2-standard-size: ;
-    --h3-standard-size: ;
-    --p-standard-size: ;
+    --p-text-size: 16px;
+    h1 {
+        font-size: 50px;
+    }
 
+    h2 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
 
     /*
     TO DO: Add @media rule ("prefers-color-scheme") to control color schemes. Also make colors variables so I can use primary, secondary, tertiary etc. 
     */
 
-}
-
 body {
     margin: 0;
     overflow: hidden;
+    background: #0099ff;
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 720px) and (hover:none) {
     :root {
         --results-side-margin: 2%;
         --recipe-side-margin: 2%;
         --button-standard-size: 130px;
-    }
+        --p-text-size: 37px;
 
-    body {
-        background-color: red;
-    }
+        body {
+            background-color: purple;
+        }
 
-    h1 {
-        font-size: 75px;
-    }
+        h1 {
+            font-size: 80px;
+        }
 
-    h2 {
-        font-size: 50px;
-    }
+        h2 {
+            font-size: 65px;
+        }
 
-    h3 {
-        font-size: 35px;
+        h3 {
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 37px;
+        }
+
     }
 }
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 980px) and (hover:none) {
+    :root {
+        --results-side-margin: 2%;
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+        --p-text-size: 32px;
+
+        body {
+            background-color: red;
+        }
+
+        h1 {
+            font-size: 70px;
+        }
+
+        h2 {
+            font-size: 50px;
+        }
+
+        h3 {
+            font-size: 35px;
+        }
+
+        p {
+            font-size: 32px;
+        }
+    }
+}
+
+@media screen and (min-width: 1080px) and (hover:none) {
     :root {
         --results-side-margin: 6%;
         --recipe-side-margin: 12%;
         --button-standard-size: 100px;
-    }
+        --p-text-size: 23px;
 
-    body {
-        background-color: orange;
-    }
-    
-    h1 {
-        font-size: 65px;
-    }
+        body {
+            background-color: orange;
+        }
+        
+        h1 {
+            font-size: 65px;
+        }
 
-    h2 {
-        font-size: 40px;
-    }
+        h2 {
+            font-size: 45px;
+        }
 
-    h3 {
-        font-size: 25px;
+        h3 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 23px;
+        }
     }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) and (hover:none) {
     :root {
         --results-side-margin: 10%;
         --recipe-side-margin: 20%;
         --button-standard-size: 85px;
-    }
+        --p-text-size: 19px;
 
-    body {
-        background-color: yellow;
-    }
+        body {
+            background-color: yellow;
+        }
 
-    h1 {
-        font-size: 50px;
-    }
+        h1 {
+            font-size: 53px;
+        }
 
-    h2 {
-        font-size: 35px;
-    }
+        h2 {
+            font-size: 38px;
+        }
 
-    h3 {
-        font-size: 25px;
-    }
+        h3 {
+            font-size: 28px;
+        }
 
+        p {
+            font-size: 19px;
+        }
+    }
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 1920px) and (hover:none) {
     :root {
         --results-side-margin: 15%;
         --recipe-side-margin: 30%;
         --button-standard-size: 65px;
-    }
+        --p-text-size: 16px;
 
-    body {
-        background-color: green;
-    }
+        body {
+            background-color: green;
+        }
 
-    h1 {
-        font-size: 50px;
-    }
+        h1 {
+            font-size: 50px;
+        }
 
-    h2 {
-        font-size: 35px;
-    }
+        h2 {
+            font-size: 35px;
+        }
 
-    h3 {
-        font-size: 25px;
+        h3 {
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 16px;
+        }
     }
 }
 
@@ -136,8 +194,7 @@ body {
 
 
 html {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    
 }   
 
 h3 {
@@ -470,7 +527,7 @@ h3 {
         position: absolute;
         transform: translateX(-100%);
         left: calc(100% - 10px);
-        top: 10px;
+        bottom: 30px;
         height: 30px;
         width: 30px;
         z-index: 20;
@@ -556,12 +613,25 @@ h3 {
     }
 }
 
+.instruction-item {
+    font-size: var(--p-text-size);
+}
+
+.note-item {
+    font-size: var(--p-text-size);
+}
+
+.ingredient-item {
+    font-size: var(--p-text-size);
+    margin-left: 5px;
+    }
+
 
 #unitswitch {
     --switch-width: 250px;
     position: relative;
     display: grid;
-    grid-template-columns: 100px 100px;
+    grid-template-columns: 1fr 1fr;
     background: white;
     border-radius: 10px;
     overflow: hidden;
@@ -574,12 +644,11 @@ h3 {
     display: grid;
     place-content: center;
     text-align: center;
-    height: 30px;
     outline: 1px solid black;
     mix-blend-mode: difference;
     color: white;
     z-index: 100;
-    font-size: 12px;
+    font-size: var(--p-text-size);
     }
 
     .unitswitch:hover {
@@ -593,13 +662,14 @@ h3 {
     }
 
     #unitswitch-color {
+        --color-width: 33%;
         background: black;
         position: absolute;
-        left: calc(var(--switch-width) - 100px);
+        left: 0%;
         transition: left 0.3s cubic-bezier(0.42, 0, 0.58, 1.0);
         top: 0%;
-        width: 100px;
-        height: 50px;
+        width: 50%;
+        height: 100%;
     }
 }
 
@@ -627,7 +697,8 @@ h3 {
     margin-top: 10px;
     margin-bottom: 3px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: var(--p-text-size);
+    margin-left: 5px;
 
 }
 
