--- a/authors/authors.css
+++ b/authors/authors.css
@@ -1,14 +1,9 @@
 
 :root {
     /*variable declaration*/
-    /*standard values*/
-    --ocean-heght: 90vh;
-    --top-bar-height: 9.7vh;
-    --side-margin: 25%;
+    --side-margin: 30%;
     --button-standard-size: 65px;
     --p-text-size: 16px;
-    --recipe-tile-additional-size: 0px;
-
     h1 {
         font-size: 50px;
     }
@@ -32,7 +27,163 @@
 
 body {
     margin: 0;
-    overflow: scroll;
+    overflow: hidden;
+    background: #0099ff;
+}
+
+@media screen and (min-width: 720px) and (hover:none) {
+    :root {
+        --results-side-margin: 2%;
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+        --p-text-size: 37px;
+
+        body {
+            background-color: purple;
+        }
+
+        h1 {
+            font-size: 80px;
+        }
+
+        h2 {
+            font-size: 65px;
+        }
+
+        h3 {
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 37px;
+        }
+
+    }
+}
+
+@media screen and (min-width: 980px) and (hover:none) {
+    :root {
+        --results-side-margin: 2%;
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+        --p-text-size: 32px;
+
+        body {
+            background-color: red;
+        }
+
+        h1 {
+            font-size: 70px;
+        }
+
+        h2 {
+            font-size: 50px;
+        }
+
+        h3 {
+            font-size: 35px;
+        }
+
+        p {
+            font-size: 32px;
+        }
+    }
+}
+
+@media screen and (min-width: 1080px) and (hover:none) {
+    :root {
+        --results-side-margin: 6%;
+        --recipe-side-margin: 12%;
+        --button-standard-size: 100px;
+        --p-text-size: 23px;
+
+        body {
+            background-color: orange;
+        }
+        
+        h1 {
+            font-size: 65px;
+        }
+
+        h2 {
+            font-size: 45px;
+        }
+
+        h3 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 23px;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) and (hover:none) {
+    :root {
+        --results-side-margin: 10%;
+        --recipe-side-margin: 20%;
+        --button-standard-size: 85px;
+        --p-text-size: 19px;
+
+        body {
+            background-color: yellow;
+        }
+
+        h1 {
+            font-size: 53px;
+        }
+
+        h2 {
+            font-size: 38px;
+        }
+
+        h3 {
+            font-size: 28px;
+        }
+
+        p {
+            font-size: 19px;
+        }
+    }
+}
+
+@media screen and (min-width: 1920px) and (hover:none) {
+    :root {
+        --results-side-margin: 15%;
+        --recipe-side-margin: 30%;
+        --button-standard-size: 65px;
+        --p-text-size: 16px;
+
+        body {
+            background-color: green;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+
+        h2 {
+            font-size: 35px;
+        }
+
+        h3 {
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+    }
+}
+
+    /*
+    TO DO: Add @media rule ("prefers-color-scheme") to control color schemes. Also make colors variables so I can use primary, secondary, tertiary etc. 
+    */
+
+body {
+    margin: 0;
+    overflow: hidden;
     background: #0099ff;
 }
 
@@ -53,9 +204,12 @@ h1 {
 
 #menu-bar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin-bottom: 5%;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .portrait {
@@ -68,18 +222,28 @@ h1 {
 }
 
 #frame {
+    position: relative;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     background: rgb(252, 252, 235);
+    max-height: 95vh;
     min-height: 95vh;
     margin-top: 2.5vh;
     margin-bottom: 5vh;
-    border-radius: 20px 20px 0% 20px;
+    border-radius: 20px 20px 0px 20px;
     width: calc(100% - (var(--side-margin) * 2));
     margin-left: auto;
     margin-right: auto;
     box-shadow: 5px 5px 10px black;
-    padding: 3%;
+}
 
+#non-menu-content {
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+    overflow-y: scroll;
+    padding: 3%;
 }
 
 .button {
@@ -95,6 +259,7 @@ h1 {
     justify-content: space-around;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
 }
 
 a {
@@ -130,6 +295,17 @@ a {
     width: 250px;
     height: 50px;
     place-items: center;
+}
+
+.fade {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background: rgb(252, 252, 235);
+    background: linear-gradient(to bottom,rgba(252, 252, 235, 0) 0%, rgba(252, 252, 235, 1) 75%, rgba(252, 252, 235, 1) 100%);
+    border-radius: 0px 0px 0px 20px;
+    pointer-events: none;
 }
 
 /*Very small non-screens*/
@@ -312,7 +488,7 @@ a {
 /*Narrow screens*/
 @media screen and (max-width: 1920px) and (hover) {
     :root {
-        --side-margin: 15%;
+        --side-margin: 20%;
 
         body {
             background-color: cyan;
