--- a/recipes/recipe.css
+++ b/recipes/recipe.css
@@ -1,23 +1,55 @@
+:root {
+    /*variable declaration*/
+    --recipe-side-margin: 30%;
+    --button-standard-size: 65px;
+    --p-text-size: 16px;
+    h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
+
+    /*
+    TO DO: Add @media rule ("prefers-color-scheme") to control color schemes. Also make colors variables so I can use primary, secondary, tertiary etc. 
+    */
+
+body {
+    margin: 0;
+    background: pink;
+}
+
 html, body {
     margin: 0;
-    background: #0099ff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #main {
-    width: 60%;
+    position: relative;
+    width: calc(100% - (var(--recipe-side-margin) * 2));
     background: rgb(252, 252, 235);
     margin: auto;
     display: flex;
     flex-direction: column;
-    min-height: 95vh;
-    margin-top: 5vh;
-    border-radius: 2% 2% 2% 2%;
+    max-height: 95vh;
+    margin-top: 2.5vh;
+    border-radius: 20px 20px 0% 20px;
     box-shadow: 5px 5px 10px black;
 }
 
 #recipe-content {
     min-height: 0;
+    overflow-y: scroll;
     flex-grow: 1;
     padding-left: 2%;
     padding-right: 2%;
@@ -28,9 +60,14 @@ html, body {
     }
 }
 
+#recipe-notes {
+    margin-bottom: 50px;
+}
+
 #menu-bar {
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: space-between;
     margin-left: 10%;
     margin-right: 10%;
@@ -39,8 +76,7 @@ html, body {
 }
 
 #back {
-    width: 65px;
-    height: 65px;
+    width: var(--button-standard-size);
     cursor: pointer;
 }
 
@@ -48,7 +84,7 @@ html, body {
     --switch-width: 250px;
     position: relative;
     display: grid;
-    grid-template-columns: 100px 100px;
+    grid-template-columns: 1fr 1fr;
     background: white;
     border-radius: 10px;
     overflow: hidden;
@@ -61,12 +97,11 @@ html, body {
     display: grid;
     place-content: center;
     text-align: center;
-    height: 30px;
     outline: 1px solid black;
     mix-blend-mode: difference;
     color: white;
     z-index: 100;
-    font-size: 12px;
+    font-size: var(--p-text-size);
     }
 
     .unitswitch:hover {
@@ -80,16 +115,16 @@ html, body {
     }
 
     #unitswitch-color {
+        --color-width: 33%;
         background: black;
         position: absolute;
-        left: calc(var(--switch-width) - 100px);
+        left: 50%;
         transition: left 0.3s cubic-bezier(0.42, 0, 0.58, 1.0);
         top: 0%;
-        width: 100px;
-        height: 50px;
+        width: 50%;
+        height: 100%;
     }
 }
-
 
 
 #recipe-top-bar {
@@ -112,4 +147,193 @@ html, body {
     font-weight: strong;
     font-size: 16px;
 
+}
+
+li {
+    font-size: var(--p-text-size)
+}
+
+.fade {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background: rgb(252, 252, 235);
+    background: linear-gradient(to bottom,rgba(252, 252, 235, 0) 0%, rgba(252, 252, 235, 1) 75%, rgba(252, 252, 235, 1) 100%);
+    pointer-events: none;
+}
+
+@media screen and (min-width: 720px) and (hover:none) {
+    :root {
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+        --p-text-size: 37px;
+
+        body {
+            background-color: purple;
+        }
+
+        h1 {
+            font-size: 80px;
+        }
+
+        h2 {
+            font-size: 65px;
+        }
+
+        h3 {
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 37px;
+        }
+
+    }
+}
+
+@media screen and (min-width: 980px) and (hover:none) {
+    :root {
+        --recipe-side-margin: 2%;
+        --button-standard-size: 130px;
+        --p-text-size: 32px;
+
+        body {
+            background-color: red;
+        }
+
+        h1 {
+            font-size: 70px;
+        }
+
+        h2 {
+            font-size: 50px;
+        }
+
+        h3 {
+            font-size: 35px;
+        }
+
+        p {
+            font-size: 32px;
+        }
+    }
+}
+
+@media screen and (min-width: 1080px) and (hover:none) {
+    :root {
+        --recipe-side-margin: 12%;
+        --button-standard-size: 100px;
+        --p-text-size: 23px;
+
+        body {
+            background-color: orange;
+        }
+        
+        h1 {
+            font-size: 65px;
+        }
+
+        h2 {
+            font-size: 45px;
+        }
+
+        h3 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 23px;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) and (hover:none) {
+    :root {
+        --recipe-side-margin: 20%;
+        --button-standard-size: 85px;
+        --p-text-size: 19px;
+
+        body {
+            background-color: yellow;
+        }
+
+        h1 {
+            font-size: 53px;
+        }
+
+        h2 {
+            font-size: 38px;
+        }
+
+        h3 {
+            font-size: 28px;
+        }
+
+        p {
+            font-size: 19px;
+        }
+    }
+}
+
+@media screen and (min-width: 1920px) and (hover:none) {
+    :root {
+        --recipe-side-margin: 30%;
+        --button-standard-size: 65px;
+        --p-text-size: 16px;
+
+        body {
+            background-color: green;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+
+        h2 {
+            font-size: 35px;
+        }
+
+        h3 {
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+    }
+}
+
+/*Narrow screens*/
+@media screen and (max-width: 1920px) and (hover) {
+    :root {
+        --recipe-side-margin: 20%;
+
+        body {
+            background-color: cyan;
+        }
+    }
+
+    .portrait {
+        float: right;
+        margin: 20px;
+    }
+}
+
+/*Picture clipping*/
+@media screen and (max-width: 1500px) and (hover) {
+    :root {
+        --recipe-side-margin: 15%;
+
+        body {
+            background-color: turquoise;
+        }
+    }
+
+    .portrait {
+        float: none;
+        display: block;
+        margin: auto;
+        width: 80%;
+    }
 }
