--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ TO DO: Add @media rule ("hover") to disable this if the user cannot hover.
     --recipe-side-margin: 30%;
     --button-standard-size: 65px;
     --p-text-size: 16px;
+    --fade-height: 10%;
     h1 {
         font-size: 50px;
     }
@@ -602,9 +603,9 @@ h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: var(--fade-height);
     background: rgb(252, 252, 235);
-    background: linear-gradient(to bottom,rgba(252, 252, 235, 0) 0%, rgba(252, 252, 235, 1) 75%, rgba(252, 252, 235, 1) 100%);
+    background: linear-gradient(to bottom,rgba(252, 252, 235, 0) 10%, rgba(252, 252, 235, 1) 100%);
     pointer-events: none;
 }
 
@@ -680,7 +681,7 @@ h3 {
 }
 
 #recipe-notes { 
-    margin-bottom: 50px;
+    margin-bottom: var(--fade-height);
 }
 
 
