--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ TO DO: Add @media rule ("hover") to disable this if the user cannot hover.
     --recipe-side-margin: 30%;
     --button-standard-size: 65px;
     --p-text-size: 16px;
-    --fade-height: 10%;
+    --fade-height: 6%;
     h1 {
         font-size: 50px;
     }
@@ -465,7 +465,7 @@ h3 {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    padding-bottom: 50px;
+    padding-bottom: var(--fade-height);
 }
 
 .menu-section-container {
