--- a/authors/authors.css
+++ b/authors/authors.css
@@ -227,8 +227,8 @@ h1 {
     display: flex;
     flex-direction: column;
     background: rgb(252, 252, 235);
-    max-height: 95vh;
-    min-height: 95vh;
+    max-height: 95dvh;
+    min-height: 95dvh;
     margin-top: 2.5vh;
     margin-bottom: 5vh;
     border-radius: 20px 20px 0px 20px;
