--- a/index.css
+++ b/index.css
@@ -574,10 +574,6 @@ h3 {
     box-shadow: 5px 5px 10px black;
 }
 
-#recipe-title {
-    font-size: 40px;
-}
-
 .test {
     margin-left: 3%;
     margin-right: 3%;
@@ -591,8 +587,8 @@ h3 {
     padding-left: 2%;
     padding-right: 2%;
     background: rgb(252, 252, 235);
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
 
     h1, h2, h3 {
         text-align: center;
@@ -627,6 +623,10 @@ h3 {
 
 .note-item {
     font-size: var(--p-text-size);
+
+    a {
+        font-size: var(--p-text-size);
+    }
 }
 
 .ingredient-item {
@@ -635,7 +635,7 @@ h3 {
 
 
 #unitswitch {
-    --switch-width: 250px;
+    padding: 1%;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -643,7 +643,9 @@ h3 {
     border-radius: 10px;
     overflow: hidden;
     outline: 1px solid black;
-    width: var(--switch-width);
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: space-between;
 
     .unitswitch {
@@ -700,13 +702,12 @@ h3 {
 }
 
 .recipe-sub-header {
+    text-decoration: underline;
     display: block;
-    margin-top: 10px;
-    margin-bottom: 3px;
+    margin-top: 20px;
     font-weight: bold;
     font-size: var(--p-text-size);
     margin-left: 5px;
-
 }
 
 
